// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`1. secondary two and two - small 1`] = `
Array [
  <div
    style={
      Object {
        "WebkitBoxDirection": "normal",
        "WebkitBoxFlex": 1,
        "WebkitBoxOrient": "horizontal",
        "WebkitFlexBasis": "0%",
        "WebkitFlexDirection": "row",
        "WebkitFlexGrow": 1,
        "WebkitFlexShrink": 1,
        "flexBasis": "0%",
        "flexDirection": "row",
        "flexGrow": 1,
        "flexShrink": 1,
        "msFlexDirection": "row",
        "msFlexNegative": 1,
        "msFlexPositive": 1,
        "msFlexPreferredSize": "0%",
      }
    }
  >
    <div
      style={
        Object {
          "width": "50%",
        }
      }
    >
      <div>
        secondary-1
      </div>
    </div>
    <div
      style={
        Object {
          "borderBottomColor": "rgba(219,219,219,1.00)",
          "borderBottomStyle": "solid",
          "borderLeftColor": "rgba(219,219,219,1.00)",
          "borderLeftStyle": "solid",
          "borderRightColor": "rgba(219,219,219,1.00)",
          "borderRightStyle": "solid",
          "borderRightWidth": "1px",
          "borderTopColor": "rgba(219,219,219,1.00)",
          "borderTopStyle": "solid",
          "marginBottom": "10px",
          "marginTop": "10px",
        }
      }
    />
    <div
      style={
        Object {
          "width": "50%",
        }
      }
    >
      <div>
        secondary-2
      </div>
    </div>
  </div>,
  <div
    style={
      Object {
        "borderBottomColor": "rgba(219,219,219,1.00)",
        "borderBottomStyle": "solid",
        "borderBottomWidth": "1px",
        "borderLeftColor": "rgba(219,219,219,1.00)",
        "borderLeftStyle": "solid",
        "borderRightColor": "rgba(219,219,219,1.00)",
        "borderRightStyle": "solid",
        "borderTopColor": "rgba(219,219,219,1.00)",
        "borderTopStyle": "solid",
        "marginLeft": "10px",
        "marginRight": "10px",
      }
    }
  />,
  <div>
    <div>
      support-1
    </div>
  </div>,
  <div
    style={
      Object {
        "borderBottomColor": "rgba(219,219,219,1.00)",
        "borderBottomStyle": "solid",
        "borderBottomWidth": "1px",
        "borderLeftColor": "rgba(219,219,219,1.00)",
        "borderLeftStyle": "solid",
        "borderRightColor": "rgba(219,219,219,1.00)",
        "borderRightStyle": "solid",
        "borderTopColor": "rgba(219,219,219,1.00)",
        "borderTopStyle": "solid",
        "marginLeft": "10px",
        "marginRight": "10px",
      }
    }
  />,
  <div>
    <div>
      support-2
    </div>
  </div>,
]
`;

exports[`2. secondary two and two - medium 1`] = `
<div
  style={
    Object {
      "WebkitBoxFlex": 1,
      "WebkitFlexBasis": "0%",
      "WebkitFlexGrow": 1,
      "WebkitFlexShrink": 1,
      "flexBasis": "0%",
      "flexGrow": 1,
      "flexShrink": 1,
      "marginLeft": "10px",
      "marginRight": "10px",
      "msFlexNegative": 1,
      "msFlexPositive": 1,
      "msFlexPreferredSize": "0%",
    }
  }
>
  <div
    style={
      Object {
        "WebkitBoxDirection": "normal",
        "WebkitBoxFlex": 1,
        "WebkitBoxOrient": "horizontal",
        "WebkitFlexBasis": "0%",
        "WebkitFlexDirection": "row",
        "WebkitFlexGrow": 1,
        "WebkitFlexShrink": 1,
        "flexBasis": "0%",
        "flexDirection": "row",
        "flexGrow": 1,
        "flexShrink": 1,
        "msFlexDirection": "row",
        "msFlexNegative": 1,
        "msFlexPositive": 1,
        "msFlexPreferredSize": "0%",
        "paddingBottom": "5px",
      }
    }
  >
    <div
      style={
        Object {
          "width": "50%",
        }
      }
    >
      <div>
        secondary-1
      </div>
    </div>
    <div
      style={
        Object {
          "borderBottomColor": "rgba(219,219,219,1.00)",
          "borderBottomStyle": "solid",
          "borderLeftColor": "rgba(219,219,219,1.00)",
          "borderLeftStyle": "solid",
          "borderRightColor": "rgba(219,219,219,1.00)",
          "borderRightStyle": "solid",
          "borderRightWidth": "1px",
          "borderTopColor": "rgba(219,219,219,1.00)",
          "borderTopStyle": "solid",
          "marginBottom": "10px",
          "marginTop": "10px",
        }
      }
    />
    <div
      style={
        Object {
          "width": "50%",
        }
      }
    >
      <div>
        secondary-2
      </div>
    </div>
  </div>
  <div
    style={
      Object {
        "borderBottomColor": "rgba(219,219,219,1.00)",
        "borderBottomStyle": "solid",
        "borderBottomWidth": "1px",
        "borderLeftColor": "rgba(219,219,219,1.00)",
        "borderLeftStyle": "solid",
        "borderRightColor": "rgba(219,219,219,1.00)",
        "borderRightStyle": "solid",
        "borderTopColor": "rgba(219,219,219,1.00)",
        "borderTopStyle": "solid",
        "marginLeft": "10px",
        "marginRight": "10px",
      }
    }
  />
  <div
    style={
      Object {
        "WebkitBoxDirection": "normal",
        "WebkitBoxFlex": 1,
        "WebkitBoxOrient": "horizontal",
        "WebkitFlexBasis": "0%",
        "WebkitFlexDirection": "row",
        "WebkitFlexGrow": 1,
        "WebkitFlexShrink": 1,
        "flexBasis": "0%",
        "flexDirection": "row",
        "flexGrow": 1,
        "flexShrink": 1,
        "msFlexDirection": "row",
        "msFlexNegative": 1,
        "msFlexPositive": 1,
        "msFlexPreferredSize": "0%",
        "paddingBottom": "5px",
      }
    }
  >
    <div
      style={
        Object {
          "width": "50%",
        }
      }
    >
      <div>
        support-1
      </div>
    </div>
    <div
      style={
        Object {
          "borderBottomColor": "rgba(219,219,219,1.00)",
          "borderBottomStyle": "solid",
          "borderLeftColor": "rgba(219,219,219,1.00)",
          "borderLeftStyle": "solid",
          "borderRightColor": "rgba(219,219,219,1.00)",
          "borderRightStyle": "solid",
          "borderRightWidth": "1px",
          "borderTopColor": "rgba(219,219,219,1.00)",
          "borderTopStyle": "solid",
          "marginBottom": "10px",
          "marginTop": "10px",
        }
      }
    />
    <div
      style={
        Object {
          "width": "50%",
        }
      }
    >
      <div>
        support-2
      </div>
    </div>
  </div>
</div>
`;

exports[`3. secondary two and two - wide 1`] = `
<div
  style={
    Object {
      "WebkitBoxDirection": "normal",
      "WebkitBoxFlex": 1,
      "WebkitBoxOrient": "horizontal",
      "WebkitFlexBasis": "0%",
      "WebkitFlexDirection": "row",
      "WebkitFlexGrow": 1,
      "WebkitFlexShrink": 1,
      "flexBasis": "0%",
      "flexDirection": "row",
      "flexGrow": 1,
      "flexShrink": 1,
      "msFlexDirection": "row",
      "msFlexNegative": 1,
      "msFlexPositive": 1,
      "msFlexPreferredSize": "0%",
    }
  }
>
  <div
    style={
      Object {
        "width": "33.4%",
      }
    }
  >
    <div>
      secondary-1
    </div>
  </div>
  <div
    style={
      Object {
        "borderBottomColor": "rgba(219,219,219,1.00)",
        "borderBottomStyle": "solid",
        "borderLeftColor": "rgba(219,219,219,1.00)",
        "borderLeftStyle": "solid",
        "borderRightColor": "rgba(219,219,219,1.00)",
        "borderRightStyle": "solid",
        "borderRightWidth": "1px",
        "borderTopColor": "rgba(219,219,219,1.00)",
        "borderTopStyle": "solid",
        "marginBottom": "10px",
        "marginTop": "10px",
      }
    }
  />
  <div
    style={
      Object {
        "width": "16.6%",
      }
    }
  >
    <div>
      support-1
    </div>
  </div>
  <div
    style={
      Object {
        "borderBottomColor": "rgba(219,219,219,1.00)",
        "borderBottomStyle": "solid",
        "borderLeftColor": "rgba(219,219,219,1.00)",
        "borderLeftStyle": "solid",
        "borderRightColor": "rgba(219,219,219,1.00)",
        "borderRightStyle": "solid",
        "borderRightWidth": "1px",
        "borderTopColor": "rgba(219,219,219,1.00)",
        "borderTopStyle": "solid",
        "marginBottom": "10px",
        "marginTop": "10px",
      }
    }
  />
  <div
    style={
      Object {
        "width": "33.4%",
      }
    }
  >
    <div>
      secondary-2
    </div>
  </div>
  <div
    style={
      Object {
        "borderBottomColor": "rgba(219,219,219,1.00)",
        "borderBottomStyle": "solid",
        "borderLeftColor": "rgba(219,219,219,1.00)",
        "borderLeftStyle": "solid",
        "borderRightColor": "rgba(219,219,219,1.00)",
        "borderRightStyle": "solid",
        "borderRightWidth": "1px",
        "borderTopColor": "rgba(219,219,219,1.00)",
        "borderTopStyle": "solid",
        "marginBottom": "10px",
        "marginTop": "10px",
      }
    }
  />
  <div
    style={
      Object {
        "width": "16.6%",
      }
    }
  >
    <div>
      support-2
    </div>
  </div>
</div>
`;

exports[`4. secondary two and two - huge 1`] = `
<div
  style={
    Object {
      "WebkitAlignSelf": "center",
      "WebkitBoxDirection": "normal",
      "WebkitBoxOrient": "horizontal",
      "WebkitFlexDirection": "row",
      "alignSelf": "center",
      "flexDirection": "row",
      "msFlexDirection": "row",
      "msFlexItemAlign": "center",
      "width": "86%",
    }
  }
>
  <div
    style={
      Object {
        "width": "33.4%",
      }
    }
  >
    <div>
      secondary-1
    </div>
  </div>
  <div
    style={
      Object {
        "borderBottomColor": "rgba(219,219,219,1.00)",
        "borderBottomStyle": "solid",
        "borderLeftColor": "rgba(219,219,219,1.00)",
        "borderLeftStyle": "solid",
        "borderRightColor": "rgba(219,219,219,1.00)",
        "borderRightStyle": "solid",
        "borderRightWidth": "1px",
        "borderTopColor": "rgba(219,219,219,1.00)",
        "borderTopStyle": "solid",
        "marginBottom": "10px",
        "marginTop": "10px",
      }
    }
  />
  <div
    style={
      Object {
        "paddingLeft": "10px",
        "paddingRight": "10px",
        "width": "16.6%",
      }
    }
  >
    <div>
      support-1
    </div>
  </div>
  <div
    style={
      Object {
        "borderBottomColor": "rgba(219,219,219,1.00)",
        "borderBottomStyle": "solid",
        "borderLeftColor": "rgba(219,219,219,1.00)",
        "borderLeftStyle": "solid",
        "borderRightColor": "rgba(219,219,219,1.00)",
        "borderRightStyle": "solid",
        "borderRightWidth": "1px",
        "borderTopColor": "rgba(219,219,219,1.00)",
        "borderTopStyle": "solid",
        "marginBottom": "10px",
        "marginTop": "10px",
      }
    }
  />
  <div
    style={
      Object {
        "width": "33.4%",
      }
    }
  >
    <div>
      secondary-2
    </div>
  </div>
  <div
    style={
      Object {
        "borderBottomColor": "rgba(219,219,219,1.00)",
        "borderBottomStyle": "solid",
        "borderLeftColor": "rgba(219,219,219,1.00)",
        "borderLeftStyle": "solid",
        "borderRightColor": "rgba(219,219,219,1.00)",
        "borderRightStyle": "solid",
        "borderRightWidth": "1px",
        "borderTopColor": "rgba(219,219,219,1.00)",
        "borderTopStyle": "solid",
        "marginBottom": "10px",
        "marginTop": "10px",
      }
    }
  />
  <div
    style={
      Object {
        "paddingLeft": "10px",
        "paddingRight": "10px",
        "width": "16.6%",
      }
    }
  >
    <div>
      support-2
    </div>
  </div>
</div>
`;
